# nicoinfo

./: .env  .env.prod  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt  subscriptions.json  test.py
nicoinfo/plugins/nicoinfo/: BB_susume.py  __init__.py  get_info.py  nico_auth.py  others.py  random_cookie_image.py  usage.py  utils.py  wraps.py
