[project]
name = "nicoinfo"
version = "0.1.0"
description = "nicoinfo"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["nicoinfo/plugins"]
builtin_plugins = ["echo", "single_session"]
